<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanner.QRScannerActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/qr_scanner_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/qr_scanner_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent_50"
            app:buttonGravity="center_vertical"
            app:titleCentered="true"
            app:subtitleCentered="true"
            app:title="@string/ttl_qr_code_toolbar"
            app:subtitle="@string/desc_qr_code_toolbar"
            app:subtitleTextAppearance="@style/Widget.RHotel.TextView.Description"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/qr_scanner_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.RHotel.TextView.SubTitle"
            android:text="@string/sts_qr_scanner_waiting"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>