<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/remote_general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remote.fragments.general.RemoteGeneralFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/remote_general_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/remote_general_statistic_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/room_number_icon"
                app:tint="@color/icons_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"  />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_statistic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_remote_general_statistic"
                style="@style/Widget.RHotel.TextView.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_statistic_temperature"
                style="@style/Widget.RHotel.TextView.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_general_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remote_general_statistic_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_statistic_humidity"
                style="@style/Widget.RHotel.TextView.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/ttl_remote_general_humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remote_general_statistic_temperature" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remote_general_statistic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_general_open_panel"
                app:layout_constraintTop_toBottomOf="@id/remote_general_statistic_humidity"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/remote_general_door"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/remote_general_statistic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/remote_general_door_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/door_icon"
                app:tint="@color/icons_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"  />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_door_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_remote_general_door"
                style="@style/Widget.RHotel.TextView.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_door_status"
                style="@style/Widget.RHotel.TextView.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_general_door_lock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remote_general_door_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remote_general_door_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_general_door_lock_open"
                app:layout_constraintTop_toBottomOf="@id/remote_general_door_status"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/remote_general_dnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/remote_general_door"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/remote_general_dnd_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dnd_icon"
                app:tint="@color/icons_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"  />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_dnd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_remote_general_dnd"
                style="@style/Widget.RHotel.TextView.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_dnd_description"
                style="@style/Widget.RHotel.TextView.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/desc_remote_general_dnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remote_general_dnd_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remote_general_dnd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_general_dnd_enable"
                app:layout_constraintTop_toBottomOf="@id/remote_general_dnd_description"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/remote_general_quick_access"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/remote_general_dnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/remote_general_quick_access_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/light_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>