<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".remote.fragments.auth.RemoteAuthorizationFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/remote_authentication_required_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.CardView.Elevated"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/remote_authentication_required_icon_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/warning_icon"
                app:tint="@color/icons_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_general_statistic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_remote_authentification_required"
                style="@style/Widget.RHotel.TextView.Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/remote_authentication_required_icon_left"
                app:layout_constraintEnd_toStartOf="@id/remote_authentication_required_icon_right" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/remote_authentication_required_icon_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/warning_icon"
                app:tint="@color/icons_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remote_authentication_required_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/desc_remote_authentification_required"
                style="@style/Widget.RHotel.TextView.Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remote_general_statistic_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remote_authentication_required_scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/ttl_remote_authentification_required_scan"
                app:layout_constraintTop_toBottomOf="@id/remote_authentication_required_description"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>